# madr-tools

./: .gitignore  .prototools  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
npm/: madr.js  package-platform.mjs
scripts/: copy-templates.ts
src/: adr.rs  adr.ts  cli.rs  index.ts  main.rs  template.md  templates.rs
src/commands/: export_template.rs  init.rs  init.ts  mod.rs  new.rs  new.ts  sync.rs  sync.ts
src/templates/: index.ts  standard.md  standard.md.tera
