[package]
name = "madr"
version = "1.0.1"
edition = "2024"
description = "Manage markdown architecture decision records"
repository = "https://github.com/id6tm/madr-tools"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
tera = "1.20"
urlencoding = "2.1"
